<resources>
    <string name="app_name">SearchWordApp</string>

    // list_item.xml
    <string name="definition_ex">a visible mass of condensed watery vapour floating in the atmosphere, typically high above the general level of the ground.</string>
    <string name="example_ex">\"the sun had disappeared behind a cloud\"</string>
    <string name="type_ex">noun</string>

    // activity_main.xml
    <string name="buscar_palavra">Buscar palavra em inglês</string>
    <string name="botao_pesquisa">Botão de pesquisa</string>
    <string name="word">Cloud</string>
    <string name="pronunciation">/kloud/</string>

    <string name="alfabeto">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    // activity_about
    <string name="icone_do_aplicativo">Ícone do aplicativo</string>

    //activity_info e derivados
    <string name="como_usar">Como usar</string>
    <string name="sobre">Sobre</string>

    <string name="tutorial">Ao digitar uma palavra em inglês na caixa de texto da tela principal, o aplicativo, que deve estar conectado a Internet, faz uma busca na API: <a href="https://owlbot.info/">OwlBot - free dictionary API</a> e retorna um resultado de acordo com seu banco de dados."</string>
    <string name="disclaimer">Este aplicativo foi criado com o propósito de integrar o portfólio de Társila Costalonga e exercitar as boas práticas e técnicas do desenvolvimento mobile para Android. \n\nAlguns dos recursos utilizados foram: linguagem Kotlin, arquitetura MVVM, repositório, navigation, dataBinding e bindingAdapters, coroutines, banco de dados Room, injeção de dependência Hilt, testes com Espresso e asserções com Truth. \n\nNos links abaixo, você encontra o meu <a href="https://github.com/Tcostalonga">GitHub</a>, <a href="https://www.linkedin.com/in/t%C3%A1rsila-martins-costalonga-297b06189/">Linkedin</a> e <a href="mailto:tarsila.costalonga@gmail.com">Email</a>. </string>

</resources>