<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="itemView"
            type="tarsila.costalonga.searchwordapp.network.WordClass" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/type_txv"
            style="@style/TextMeaning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/foto_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            tools:text="@string/type_ex" />

        <TextView
            android:id="@+id/definition_txv"
            style="@style/TextWordStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/foto_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_txv"
            tools:text="@string/definition_ex" />

        <TextView
            android:id="@+id/example_txv"
            style="@style/TextExampleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            app:layout_constraintEnd_toStartOf="@id/foto_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/definition_txv"
            tools:text="@string/example_ex" />


        <ImageView
            android:id="@+id/foto_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintWidth_percent="0.2"
            tools:src="@drawable/cloud_img" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
