<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="tarsila.costalonga.searchwordapp.ui.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/medium_margin"
        tools:context=".ui.MainActivity">

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="ERRO NA TELA" />

        <ImageView
            android:id="@+id/img_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@drawable/search_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/error"
            app:layout_constraintStart_toStartOf="@id/error"
            app:layout_constraintTop_toBottomOf="@id/error"
            app:layout_constraintVertical_bias="0.15" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_txt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/buscar_palavra"
            app:layout_constraintEnd_toStartOf="@id/search_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:singleLine="true"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:background="@drawable/button_shadow"
            android:contentDescription="@string/botao_pesquisa"
            android:src="@drawable/search_24"
            app:layout_constraintBottom_toBottomOf="@id/search_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_txt"
            app:layout_constraintTop_toTopOf="@id/search_txt" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/large_margin"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/medium_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_txt"
            app:strokeColor="@color/colorGrey"
            app:strokeWidth="0.9dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/word" />

                <TextView
                    android:id="@+id/pronunciation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium_margin"
                    tools:text="@string/pronunciation" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/list_item" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

